Fixing z-index issues.

--- a/src-modules/org/opencms/ade/containerpage/client/ui/css/containerpage.css
+++ b/src-modules/org/opencms/ade/containerpage/client/ui/css/containerpage.css
@@ -77,7 +77,7 @@ div.optionBar{
 	position: absolute;
 	top: 2px;
 	right: 2px;
-	z-index: 1;
+	z-index: 1000;
 }
 
 div.toolbarToggle{
