--- a/src-modules/org/opencms/gwt/client/ui/css/general.css
+++ b/src-modules/org/opencms/gwt/client/ui/css/general.css
@@ -106,8 +106,8 @@
 	z-index: 2;
 	top: 0px;
 	left: 0px;
-	height: 100%;
-	width: 100%;
+	right: 0px;
+	bottom: 0px;
 	visibility: visible;
 }
 
